# slowfast-thesis

./: .gitignore  AGENTS.md  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  readme.md
.github/workflows/: lint.yml
dashboard/: .dockerignore  .env.example  Dockerfile  Makefile  README.md  app.py  compose.yml  config.py  logging_setup.py  plans.md  pyproject.toml
dashboard/inference/: __init__.py  buffer.py  engine.py  metrics.py  model_loader.py  pipeline.py  preprocess.py
dashboard/labels/: ava_actions.txt  kinetics400.txt
dashboard/tests/: test_smoke.py  test_tta_loading.py
dashboard/ui/: __init__.py  components.py  overlay.py  render.py  state.py
dashboard/videos/: README.txt
deployment/docker/: Dockerfile.mlflow
docs/: architecture.md  dashboard.md  experiments.md  getting-started.md  mlflow-stack.md
experiments/: cli.py  eval.py  experiments.md  train.py  verify_setup.py
experiments/core/: data_loader.py  loss.py  metrics.py
experiments/data/: dataset.py  transforms.py
experiments/dataset/: build_splits.py  download_all.py  fetch.py
experiments/experiment_01/: mlflow.db  test.csv  train.csv  train.py
experiments/experiment_02/: model.py  test.csv  train.csv  train.py
experiments/experiment_03/: model.py  train.py
experiments/experiment_04/: model.py  train.py
experiments/loss/: anticipation_loss.py
experiments/models/: attention.py  baseline.py  hybrid.py  roi_guidance.py
experiments/utils/: metrics.py
