[project]
name = "slowfast"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mlflow>=3.9.0",
    "numpy<2.0",
    "pandas>=2.3.3",
    "pytorchvideo==0.1.5",
    "torch==2.0.1",
    "torchvision==0.15.2",
    "ultralytics>=8.4.12",
    "yt-dlp>=2026.2.4",
]


[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu118", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu118", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[dependency-groups]
dev = [
    "ruff>=0.15.0",
]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "N",    # pep8-naming
    "SIM",  # flake8-simplify
    "TID",  # flake8-tidy-imports
    "PERF", # Perflint
]
ignore = [
    "N806",
    "B007",
    "N803"
]

[tool.ruff.lint.isort]
known-first-party = ["slowfast"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
